--- a/hr-admin-system/hr-admin-system-api/pom.xml
+++ b/hr-admin-system/hr-admin-system-api/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>springfox-swagger2</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
