--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <zookeeer.client.version>0.10</zookeeer.client.version>
         <mybatis.plus.starter.version>3.1.2</mybatis.plus.starter.version>
         <jjwt.version>0.9.0</jjwt.version>
+        <easypoi.version>4.1.3</easypoi.version>
     </properties>
 
     <dependencyManagement>
@@ -121,6 +122,13 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>${jjwt.version}</version>
+            </dependency>
+
+            <!--excel导数导入数据 easy poi-->
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-spring-boot-starter</artifactId>
+                <version>${easypoi.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
