--- a/hr-admin-web/pom.xml
+++ b/hr-admin-web/pom.xml
@@ -20,6 +20,18 @@
 
         <dependency>
             <groupId>com.hr</groupId>
+            <artifactId>hr-admin-document-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hr</groupId>
+            <artifactId>hr-admin-document-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hr</groupId>
             <artifactId>hr-admin-common-dubbo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
